Crash in [@ mozilla::dom::HTMLFormElement::BuildSubmission]
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | disabled |
| firefox78 | --- | disabled |
| firefox79 | --- | disabled |
| firefox80 | --- | fixed |
People
(Reporter: achronop, Assigned: sefeng211)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file, 2 obsolete files)
This bug is for crash report bp-b556378c-a648-487f-869f-3240f0200706.
Top 10 frames of crashing thread:
0 xul.dll mozilla::dom::HTMLFormElement::BuildSubmission dom/html/HTMLFormElement.cpp:744
1 xul.dll mozilla::dom::HTMLFormElement::DoSubmit dom/html/HTMLFormElement.cpp:651
2 xul.dll mozilla::dom::HTMLFormElement::PostHandleEvent dom/html/HTMLFormElement.cpp:569
3 xul.dll static mozilla::EventTargetChainItem::HandleEventTargetChain dom/events/EventDispatcher.cpp:560
4 xul.dll static mozilla::EventTargetChainItem::HandleEventTargetChain dom/events/EventDispatcher.cpp:637
5 xul.dll static mozilla::EventDispatcher::Dispatch dom/events/EventDispatcher.cpp:1054
6 xul.dll static mozilla::EventDispatcher::DispatchDOMEvent dom/events/EventDispatcher.cpp
7 xul.dll mozilla::PresShell::HandleDOMEventWithTarget layout/base/PresShell.cpp:8786
8 xul.dll mozilla::dom::HTMLFormElement::MaybeSubmit dom/html/HTMLFormElement.cpp:274
9 xul.dll mozilla::dom::HTMLButtonElement::PostHandleEvent dom/html/HTMLButtonElement.cpp:263
Started in 20200704213451 and crashes almost every day since then.
Comment 1•6 years ago
|
||
The line info in the crash report points to the dialog submission code added in bug 1557303.
Updated•6 years ago
|
Comment 2•6 years ago
|
||
Set release status flags based on info from the regressing bug 1557303
Comment 3•6 years ago
|
||
All urls are from https://forum.gamer.com.tw / https://home.gamer.com.tw. Maybe they use dialog in some obscure way?
| Assignee | ||
Comment 4•6 years ago
|
||
It's possible that the dialog is closed while we are processing
the request, and we'd deferencing a null pointer for such case.
Updated•6 years ago
|
Comment 7•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 9•6 years ago
|
||
Please nominate this for Beta and ESR78 approval when you get a chance.
| Assignee | ||
Comment 10•6 years ago
•
|
||
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1557303
[User impact if declined]: Users may experience a crash when doing dialog form submission.
[Is this code covered by automated tests?]: Yes
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: N/A
[Is the change risky?]: No
[Why is the change risky/not risky?]:
- This feature is behind a pref and disabled by default, so only a very few numbers of users may experience this crash.
- The fix is covered by a test, so it's not risky.
[String changes made/needed]: N/A
The patch that is attached to this bug is the one that we want to uplift
| Assignee | ||
Comment 11•6 years ago
|
||
[Approval Request Comment]
If this is not a sec:{high,crit} bug, please state case for ESR consideration:
When doing a dialog form submission, if the dialog is dismissed during the
submission, Firefox may crash.
User impact if declined: Users may experience a crash during dialog form submission.
Fix Landed on Version: Version 80, latest Nightly
Risk to taking this patch (and alternatives if risky): not risky.
The patch that is attached to this bug is the one that we want to uplift.
Comment 12•6 years ago
|
||
Why do we want to uplift this? <dialog> is not enabled anywhere else than nightly atm, right?
Comment 13•6 years ago
|
||
Sorry, I missed that this was disabled by default. Agreed that we can let this fix ride the trains. Sorry for the hassle, Sean!
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Comment 14•6 years ago
|
||
oh okay! I thought we want to uplift this because users can manually enable it, but I guess not uplifting this is fine since possibly only a very few users would do that...
Description
•