Bug 1652699 - Fix a null pointer crash while doing dialog form submission r=smaug

It's possible that the dialog is closed while we are processing
the request, and we'd deferencing a null pointer for such case.

Differential Revision: https://phabricator.services.mozilla.com/D83531